# CaiD

./: .gitignore  README.md  blender_debug_start.py  decode_screenshot.py
.osa/brainstorm/: claude_synthesis.md  gemini_freecad_tools.md  qwen_blender_tools.md
3d_printing_design/: laser_stand.stl  laser_stand_L_shape.stl  laser_stand_beveled.stl  laser_stand_generator.py
blender-mcp/: README.md  pyproject.toml
blender-mcp/addon/BlenderMCP/: __init__.py
blender-mcp/src/blender_mcp/: __init__.py  server.py
exports/: align_peg_chamfered.stl  arm_plate_filleted.stl  base_plate_with_recess.stl  chamfer_box.stl  m8_printable_bolt.stl
freecad-mcp/: README.md  pyproject.toml
freecad-mcp/addon/FreeCADMCP/: Init.py  InitGui.py  __init__.py  rpc_server.py
freecad-mcp/src/freecad_mcp/: __init__.py  server.py
llms.txt/: 3D_PRINTING_GUIDE.md  BLENDER_RESOURCES.md  FREECAD_RESOURCES.md  OPENSCAD_RESOURCES.md  PRD.md  RULES.md  TODO.md
openscad-mcp/: README.md  pyproject.toml
openscad-mcp/src/openscad_mcp/: __init__.py  scad_builder.py  server.py
