[project]
name = "freecad-mcp"
version = "0.1.0"
description = "MCP server for AI-assisted FreeCAD parametric modeling"
authors = [{ name = "CaiD Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
freecad-mcp = "freecad_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freecad_mcp"]
