[project]
name = "openscad-mcp"
version = "0.1.0"
description = "MCP server for AI-assisted OpenSCAD parametric modeling"
authors = [{ name = "CaiD Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "solidpython2>=2.0.0",
]

[project.scripts]
openscad-mcp = "openscad_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openscad_mcp"]
